--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 gunicorn
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-Login==0.6.3
-psycopg2-binary==2.9.9
-pandas==2.1.1
+flask
+flask_sqlalchemy
+flask_login
+psycopg2-binary
+werkze
 
 
